--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,19 @@ script:
   - docker run sselvaganesh/docker-react-img npm run test -- --coverage
 
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-reach-project"
+  env: "DockerReachProject-env"
+  bucket_name: "elasticbeanstalk-us-east-2-814677918993"
+  bucket_path: "docker-reach-project"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secrect_access_key: 
+    secure: "$AWS_SECRECT_KEY"
+
 
 
 
