--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t sselvaganesh/docker-react-img -f Dockerfile.dev .
 
 script:
-  - docker run sselvaganesh/docker-react-img npm run test -- --coverage
+  - docker run -e CI=true sselvaganesh/docker-react-img npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
