--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secrect_access_key: 
-    secure: "$AWS_SECRECT_KEY"
+    secure: $AWS_SECRECT_KEY
