--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ script:
 
 deploy:
   provider: elasticbeanstalk
+  access_key_id: 
+    secure: $AWS_ACCESS_KEY 
+  secrect_access_key: 
+    secure: $AWS_SECRECT_KEY
   region: "us-east-2"
   app: "docker-reach-project"
   env: "DockerReachProject-env"
@@ -18,6 +22,3 @@ deploy:
   bucket_path: "docker-reach-project"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secrect_access_key: 
-    secure: $AWS_SECRECT_KEY
