--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ script:
 deploy:
   provider: elasticbeanstalk
   access_key_id: 
-    secure: $AWS_ACCESS_KEY 
+    secure: $AWS_ACCESS_KEY
   secrect_access_key: 
-    secure: $AWS_SECRECT_KEY
+    secure: "$AWS_SECRECT_KEY"
   region: "us-east-2"
   app: "docker-reach-project"
   env: "DockerReachProject-env"
