--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ deploy:
   provider: elasticbeanstalk
   access_key_id: $AWS_ACCESS_KEY
   secrect_access_key: $AWS_SECRECT_KEY
-  region: "us-east-2"
-  app: "docker-reach-project"
-  env: "DockerReachProject-env"
-  bucket_name: "elasticbeanstalk-us-east-2-814677918993"
-  bucket_path: "docker-reach-project"
+  region: us-east-2
+  app: docker-reach-project
+  env: DockerReachProject-env
+  bucket_name: elasticbeanstalk-us-east-2-814677918993
+  bucket_path: docker-reach-project
