--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
     branch: master
   provider: elasticbeanstalk
   access_key_id: $AWS_ACCESS_KEY
-  secrect_access_key: 
+  secret_access_key: 
     secure: $AWS_SECRECT_KEY
   region: "us-east-2"
   app: "docker-reach-project"
